# siren

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py  index.html
docker/: Dockerfile  docker-compose.yml  prometheus.yml
frontend/: package-lock.json  package.json  stitch_landing.html
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/lib/: api.ts
scripts/: seed_qdrant.py  setup_slack_app.py  test_slack_message.py  trigger_demo.py
siren/: config.py  main.py
siren/agent/: __init__.py  graph.py  routing.py  state.py
siren/agent/nodes/: __init__.py  executor.py  guardrail_gate.py  human_approval.py  ingestion.py  investigation.py  memory_recall.py  postmortem.py  remediation_planner.py  triage.py  verifier.py
siren/api/routers/: alerts.py  approvals.py  health.py  incidents.py  memory.py
siren/db/: __init__.py  models.py  session.py  writer.py
siren/guardrails/: __init__.py  classifier.py  injection_detector.py  rate_limiter.py
siren/integrations/slack/: approval_handler.py  blocks.py  client.py
siren/llm/: __init__.py  client.py  tools.py
siren/memory/: __init__.py  embedder.py  incident_store.py  qdrant_client.py  schemas.py
siren/observability/: langsmith.py  otel.py
siren/tools/: __init__.py  registry.py
siren/tools/destructive/: drain_lb_node.py  flush_cache.py
siren/tools/read/: logs.py  (+4 more)
tests/fixtures/: sample_alerts.json
tests/integration/: test_graph_flow.py
tests/unit/: test_guardrails.py  test_routing.py  test_state.py
(+2 files in other folders)
