[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siren"
version = "1.0.0"
description = "Self-Improving Incident Response Engine — autonomous AI agent for production incident response"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-redis>=0.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis[hiredis]>=5.2.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    "slack-sdk>=3.33.0",
    "boto3>=1.35.0",
    "PyGithub>=2.5.0",
    "docker>=7.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "prometheus-client>=0.21.0",
    "langsmith>=0.1.147",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
